# turbo-clicker

./: .gitignore  .goreleaser.yaml  .packit.yaml  Cargo.toml  Makefile  README.md  build.rs  coverage.json  index.html  io.github.heathcliff26.turbo-clicker.metainfo.xml
.cargo/: config.toml
.github/: renovate.json5
.github/workflows/: audit.yaml  build-builder.yaml  ci.yaml  coverprofiles.yaml  release.yaml
hack/: build-release.sh  clean.sh  containerized  coverprofile.sh  install-deps.sh  validate.sh
hack/builder/: Dockerfile  install-deps.sh
src/: autoclicker.rs  autoclicker.rs.html  hotkey.rs  hotkey.rs.html  index.html  main.rs  main.rs.html  state.rs  state.rs.html
src/autoclicker/: index.html  mod.rs  mod.rs.html  test.rs  test.rs.html
src/state/: index.html  mod.rs  mod.rs.html  test.rs  test.rs.html
src/test/: mod.rs
testdata/: state_from_file_test_user.json
testdata/io.github.heathcliff26.turbo-clicker/: state.json
tools/: .gitattributes  copr.spec  turbo-clicker.spec
ui/: app-window.slint  global_state.slint  nav-bar.slint
ui/pages/: about_page.slint  counter_page.slint  main_page.slint  page.slint  pages.slint  settings_page.slint
