[package]
name = "turbo-clicker"
version = "0.1.2"
authors = ["Heathcliff <heathcliff@heathcliff.eu>"]
edition = "2024"
description = "GUI based auto-clicker for Linux (X11/Wayland) that simulates virtual input via enigo"
readme = "README.md"
repository = "https://github.com/heathcliff26/turbo-clicker"
license = "Apache-2.0"
exclude = [
    ".github",
    ".vscode",
    "hack",
    ".editorconfig",
    ".sourcery.yaml",
    "Makefile",
]

[dependencies]
ashpd = { version = "0.12.0", features = ["wayland"] }
enigo = { version = "0.6.1", features = ["wayland"] }
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
slint = { version = "1.14.1", default-features = false, features = [
    "std",
    "accessibility",
    "compat-1-2",
    "backend-qt",
] }
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }

[build-dependencies]
slint-build = "1.14.1"

[dev-dependencies]
i-slint-backend-testing = "=1.14.1"
serial_test = "3.2.0"
tempfile = "3.23.0"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
