[package]
name = "turbo-clicker"
version = "0.1.2"
authors = ["Heathcliff <heathcliff@heathcliff.eu>"]
edition = "2024"
description = "GUI based auto-clicker for Linux (X11/Wayland) that simulates virtual input via enigo"
readme = "README.md"
repository = "https://github.com/heathcliff26/turbo-clicker"
license = "Apache-2.0"
exclude = [
    ".github",
    ".vscode",
    "hack",
    ".editorconfig",
    ".sourcery.yaml",
    "Makefile",
]

[dependencies]
ashpd = { version = "0.12.1", features = ["wayland"] }
enigo = { version = "0.6.1", features = ["wayland"] }
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slint = { version = "1.15.0", default-features = false, features = [
    "std",
    "accessibility",
    "compat-1-2",
    "backend-qt",
] }
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }

[build-dependencies]
slint-build = "1.15.0"

[dev-dependencies]
i-slint-backend-testing = "1.15.0"
serial_test = "3.3.1"
tempfile = "3.24.0"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
