[package]
name = "turbo-clicker"
version = "0.1.5"
authors = ["Heathcliff <heathcliff@heathcliff.eu>"]
edition = "2024"
description = "GUI based auto-clicker for Linux (X11/Wayland) that simulates virtual input via enigo"
readme = "README.md"
repository = "https://github.com/heathcliff26/turbo-clicker"
license = "Apache-2.0"
exclude = [
    ".github",
    ".vscode",
    "hack",
    ".editorconfig",
    ".sourcery.yaml",
    "Makefile",
]

[dependencies]
ashpd = { version = "0.13.9", default-features = false, features = [
    "tokio",
    "global_shortcuts",
] }
enigo = { version = "0.6.1", features = ["wayland"] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slint = { version = "1.15.1", default-features = false, features = [
    "std",
    "accessibility",
    "compat-1-2",
    "backend-qt",
] }
tokio = { version = "1.50.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }

[build-dependencies]
slint-build = "1.15.1"

[dev-dependencies]
i-slint-backend-testing = "1.15.1"
serial_test = "3.4.0"
tempfile = "3.27.0"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
